--- a/app/src/main/res/layout/activity_creature.xml
+++ b/app/src/main/res/layout/activity_creature.xml
@@ -4,6 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools">
 
   <data>
+    <variable
+        name="viewmodel"
+        type="com.raywenderlich.android.creaturemon.viewmodel.CreatureViewModel" />
 
   </data>
 
@@ -141,6 +144,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/dp_16"
         android:text="@string/save"
+        android:onClick="@{() -> viewmodel.saveCreature()}"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/hitPoints" />
